guestbook-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - guestbook.unresolvable.org 
    secretName: letsencrypt-guestbook
  rules:
  - host: guestbook.unresolvable.org
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
